--- a/item-service/src/main/resources/templates/basic/item.html
+++ b/item-service/src/main/resources/templates/basic/item.html
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
+e<head>
   <meta charset="utf-8">
   <link th:href="@{/css/bootstrap.min.css}"
           href="../css/bootstrap.min.css" rel="stylesheet">
@@ -15,6 +14,10 @@
   <div class="py-5 text-center">
     <h2>상품 상세</h2>
   </div>
+
+  <h2 th:if="${param.status}" th:text="'저장 완료'"></h2>
+
+
   <div>
     <label for="itemId">상품 ID</label>
     <input type="text" id="itemId" name="itemId" class="form-control"
